projects/compiler/test/typechecker/bindingdecl/error_invalid_destructuring_tuple_too_many.1.out
Error at %FILE_NAME%:2:13
Incorrect number of destructuring arguments for tuple
  |  val ((a, b, c), d) = x
                 ^
Expected 2, but 3 were provided
