projects/compiler/test/typechecker/bindingdecl/error_invalid_destructuring_tuple_too_many.1.abra
val x = ((1, 2), 3)
val ((a, b, c), d) = x